Alterando nome do projeto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(PredictiveTable)
+project(PredictionTable)
 
 set(SOURCE_FILES main.c)
-add_executable(PredictiveTable ${SOURCE_FILES})
+add_executable(PredictionTable ${SOURCE_FILES})
